a default rainbow palette

--- a/src/variables/global/_hu-colors.scss
+++ b/src/variables/global/_hu-colors.scss
@@ -9,34 +9,107 @@ $hu-colors-keywords: (
 
 $hu-colors: hu-append((
   neutral: (
-    0: #fff,
-    100: #fafbfd,
-    200: #f9fafc,
-    300: #f1f4f8,
-    400: #f1f1f1,
-    500: #e0e1e2,
-    600: #aeaeae,
-    700: #888,
-    800: #626262,
-    900: #495b60,
-    1000: #140a01,
-  ),
-  blue: (
-    100: #f3f9ff,
-    300: #cff5fa,
-    400: #afeff7,
-    600: #00c2da,
-    1000: #003453,
-  ),
-  yellow: (
-    200: #fdf8c2,
-    300: #fbf5ac,
-  ),
-  green: (
-    1000: #17653b,
+    0: #ffffff,
+    100: #e0e0e0,
+    200: #c9c9c9,
+    300: #aaaaaa,
+    400: #999999,
+    500: #898989,
+    600: #7d7d7d,
+    700: #696969,
+    800: #434343,
+    900: #252525,
+    1000: #1a1a1a,
   ),
   red: (
-    100: #fffdfc,
-    1000: #b40b00,
-  )), $hu-colors-keywords
-) !default;
+    0: #f9ecea,
+    100: #f2c7c5,
+    200: #ea9e9c,
+    300: #e16d68,
+    400: #d9524b,
+    500: #d14139,
+    600: #c4372e,
+    700: #a92d25,
+    800: #67211c,
+    900: #361110,
+    1000: #260b0a,
+  ),
+  orange: (
+    0: #faefea,
+    100: #f4d5c6,
+    200: #eeb89e,
+    300: #e4916b,
+    400: #dc7d51,
+    500: #d46c3e,
+    600: #c76034,
+    700: #ab502a,
+    800: #6a371f,
+    900: #371d11,
+    1000: #27140b,
+  ),
+  yellow: (
+    0: #fcfcec,
+    100: #faf8ca,
+    200: #f7f2a4,
+    300: #f0ea78,
+    400: #e9e262,
+    500: #e3dc56,
+    600: #d4ce4c,
+    700: #b7b13f,
+    800: #706d29,
+    900: #3b3a16,
+    1000: #2a290e,
+  ),
+  green: (
+    0: #edfbf4,
+    100: #cff8df,
+    200: #aff4c9,
+    300: #8bedab,
+    400: #7ae69a,
+    500: #6fdf8d,
+    600: #66d280,
+    700: #56b56c,
+    800: #356e46,
+    900: #1c3a25,
+    1000: #13291a,
+  ),
+  blue: (
+    0: #ebf6fb,
+    100: #ccebf8,
+    200: #a8ddf4,
+    300: #7dc9ed,
+    400: #67bbe5,
+    500: #59b0de,
+    600: #4fa3d1,
+    700: #428cb4,
+    800: #2a556e,
+    900: #172e3a,
+    1000: #0f2129,
+  ),
+  indigo: (
+    0: #ede9fa,
+    100: #ccc5f6,
+    200: #a79bf1,
+    300: #7968e9,
+    400: #5e4be1,
+    500: #4a38da,
+    600: #3d2dcd,
+    700: #3224b1,
+    800: #251a6b,
+    900: #141039,
+    1000: #0e0a28,
+  ),
+  violet: (
+    0: #f8eafb,
+    100: #eec7f7,
+    200: #e39ff2,
+    300: #d46eea,
+    400: #cb54e3,
+    500: #c345dc,
+    600: #b73bcf,
+    700: #9d30b2,
+    800: #61216c,
+    900: #321239,
+    1000: #240c29,
+  ),
+), $hu-colors-keywords) !default;
