--- a/src/_project-scaffold.scss
+++ b/src/_project-scaffold.scss
@@ -1,11 +1,13 @@
-@import "helpers";
+@import "hucssley/helpers";
 
-@import "variables/global/index";
-@import "variables/reset/index";
-// set global overrides
+@import "hucssley/variables/global/index";
+@import "custom/variables/global";
 
-// set class overrides here if you don't need access to the defaults
-@import "variables/classes/index";
-// set class and referenced variable overrides here if you need access to the defaults
+@import "hucssley/variables/classes/index";
+@import "custom/variables/classes"; // set class overrides before if you don't need access to the defaults
 
-@import "styles";
+@import "hucssley/variables/reset/index";
+@import "custom/variables/reset";
+
+@import "hucssley/styles";
+@import "custom/classes";
