--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -52,6 +52,7 @@
 @import "hu-rotate";
 @import "hu-scale";
 @import "hu-scroll-behavior";
+@import "hu-shadow";
 @import "hu-svg-fill-color";
 @import "hu-svg-fill-rule";
 @import "hu-svg-stroke-color";
