--- a/src/classes/_hu-bg-position-x.scss
+++ b/src/classes/_hu-bg-position-x.scss
@@ -1,3 +1,4 @@
+// bg-position-x -> background-position-x
 @each $module in hu-format-modules($hu-bg-position-x-modules) {
   @each $type, $value in $hu-bg-position-x-types {
     $class-name: hu-class-name(bg-position-x-#{$type});
