--- a/src/classes/_hu-bg-position-y.scss
+++ b/src/classes/_hu-bg-position-y.scss
@@ -1,3 +1,4 @@
+// bg-position-y -> background-position-y
 @each $module in hu-format-modules($hu-bg-position-y-modules) {
   @each $type, $value in $hu-bg-position-y-types {
     $class-name: hu-class-name(bg-position-y-#{$type});
