added debug css

--- a/src/variables/global/_index.scss
+++ b/src/variables/global/_index.scss
@@ -1,6 +1,7 @@
 @import "hu-breakpoints";
-@import "hu-colors";
 @import "hu-border";
+@import "hu-colors";
+@import "hu-debug";
 @import "hu-escape-class-name-types";
 @import "hu-namespace";
 @import "hu-spacings";
