--- a/src/variables/classes/_hu-rotate.scss
+++ b/src/variables/classes/_hu-rotate.scss
@@ -1,15 +1,15 @@
 $hu-rotate-modules: () !default;
 
 $hu-rotate-types: (
-  n360: rotate(-360deg),
-  n270: rotate(-270deg),
-  n180: rotate(-180deg),
-  n90: rotate(-90deg),
-  n45: rotate(-45deg),
-  0: rotate(0),
-  45: rotate(45deg),
-  90: rotate(90deg),
-  180: rotate(180deg),
-  270: rotate(270deg),
-  360: rotate(360deg),
+  n360: -360deg,
+  n270: -270deg,
+  n180: -180deg,
+  n90: -90deg,
+  n45: -45deg,
+  0: 0,
+  45: 45deg,
+  90: 90deg,
+  180: 180deg,
+  270: 270deg,
+  360: 360deg,
 ) !default;
