--- a/src/variables/classes/_hu-scale.scss
+++ b/src/variables/classes/_hu-scale.scss
@@ -1,16 +1,16 @@
 $hu-scale-modules: (hocus) !default;
 
 $hu-scale-types: (
-  0: scale(0),
-  50: scale(0.5),
-  80: scale(0.8),
-  85: scale(0.85),
-  90: scale(0.9),
-  95: scale(0.95),
-  100: scale(1),
-  105: scale(1.05),
-  110: scale(1.1),
-  115: scale(1.15),
-  120: scale(1.2),
-  150: scale(1.5),
+  0: 0,
+  50: 0.5,
+  80: 0.8,
+  85: 0.85,
+  90: 0.9,
+  95: 0.95,
+  100: 1,
+  105: 1.05,
+  110: 1.1,
+  115: 1.15,
+  120: 1.2,
+  150: 1.5,
 ) !default;
