--- a/src/classes/_hu-scale.scss
+++ b/src/classes/_hu-scale.scss
@@ -1,3 +1,4 @@
+// scale-x -> transform: scale
 @each $module in hu-format-modules($hu-scale-modules) {
   @each $type, $value in $hu-scale-types {
     $class-name: hu-class-name(scale-#{$type});
@@ -5,7 +6,7 @@
     $value: if($value, $value, $type);
 
     @include hu-generic($class-name, $module) {
-      #{$property}: $value;
+      #{$property}: scale($value);
     }
   }
 }
