--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -65,6 +65,7 @@
 @import "hu-theme-border-color";
 @import "hu-theme-color";
 @import "hu-transform";
+@import "hu-transition";
 @import "hu-transition-delay";
 @import "hu-transition-duration";
 @import "hu-transition-property";
