--- a/src/classes/_hu-flex-grow.scss
+++ b/src/classes/_hu-flex-grow.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-flex-grow-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-flex-grow-types {
         $class-name: hu-class-name(flex-grow-#{$type});
         $property: flex-grow;
