--- a/src/classes/_hu-font-family.scss
+++ b/src/classes/_hu-font-family.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-font-family-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-font-family-types {
         $class-name: hu-class-name(font-family-#{$type});
         $property: font-family;
