--- a/src/classes/_hu-justify-items.scss
+++ b/src/classes/_hu-justify-items.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-justify-items-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-justify-items-types {
         $class-name: hu-class-name(justify-items-#{$type});
         $property: justify-items;
