--- a/src/classes/_hu-margin.scss
+++ b/src/classes/_hu-margin.scss
@@ -105,7 +105,7 @@
 
 @if (index($hu-margin-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $scale, $value in $hu-margin-scale {
         @each $type, $properties in $hu-margin-types {
           $class-name: hu-class-name(#{$type}-#{$scale});
