--- a/src/classes/_hu-momentum-scrolling.scss
+++ b/src/classes/_hu-momentum-scrolling.scss
@@ -11,7 +11,7 @@
 
 @if (index($hu-momentum-scrolling-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-momentum-scrolling-types {
         $class-name: hu-class-name(momentum-scrolling-#{$type});
         $property: -webkit-overflow-scrolling;
