--- a/src/classes/_hu-overscroll.scss
+++ b/src/classes/_hu-overscroll.scss
@@ -14,7 +14,7 @@
 
 @if (index($hu-overscroll-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-overscroll-types {
         $class-name: hu-class-name(overscroll-#{$type});
         $property: overscroll-behavior;
