--- a/src/classes/_hu-pointer-events.scss
+++ b/src/classes/_hu-pointer-events.scss
@@ -13,7 +13,7 @@
 
 @if (index($hu-pointer-events-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-pointer-events-types {
         $class-name: hu-class-name(pointer-events-#{$type});
         $property: pointer-events;
