--- a/src/classes/_hu-table-border.scss
+++ b/src/classes/_hu-table-border.scss
@@ -13,7 +13,7 @@
 
 @if (index($hu-table-border-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-table-border-types {
         $class-name: hu-class-name(table-border-#{$type});
         $property: border-collapse;
