--- a/src/classes/_hu-transition-easing.scss
+++ b/src/classes/_hu-transition-easing.scss
@@ -13,7 +13,7 @@
 
 @if (index($hu-transition-easing-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-transition-easing-types {
         $class-name: hu-class-name(transition-easing-#{$type});
         $property: transition-easing;
