--- a/src/classes/_hu-vertical-align.scss
+++ b/src/classes/_hu-vertical-align.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-vertical-align-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-vertical-align-types {
         $class-name: hu-class-name(vertical-align-#{$type});
         $property: vertical-align;
