--- a/src/classes/_hu-visually-hidden.scss
+++ b/src/classes/_hu-visually-hidden.scss
@@ -20,7 +20,7 @@
 
 @if (index($hu-visually-hidden-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-visually-hidden-types {
         $class-name: hu-class-name(visually-hidden);
 
