--- a/src/classes/_hu-z-index.scss
+++ b/src/classes/_hu-z-index.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-z-index-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-z-index-types {
         $class-name: hu-class-name(z-index-#{$type});
         $property: z-index;
