--- a/src/mixins/_index.scss
+++ b/src/mixins/_index.scss
@@ -4,6 +4,7 @@
 @import "hu-group-hover";
 @import "hu-group-state";
 @import "hu-hocus";
+@import "hu-media-query";
 @import "hu-parent";
 @import "hu-parent-responsive";
 @import "hu-print";
