--- a/src/classes/_hu-align-items.scss
+++ b/src/classes/_hu-align-items.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-align-items-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-align-items-types {
         $class-name: hu-class-name(align-items-#{$type});
         $property: align-items;
