--- a/src/classes/_hu-bg-color.scss
+++ b/src/classes/_hu-bg-color.scss
@@ -14,7 +14,7 @@
 
 @if (index($hu-bg-color-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $hue, $colors in $hu-bg-color-types {
         @each $scale, $value in $colors {
           $class-name: hu-class-name(bg-color-#{$hue}-#{$scale});
