--- a/src/classes/_hu-bg-image.scss
+++ b/src/classes/_hu-bg-image.scss
@@ -13,7 +13,7 @@
 
 @if (index($hu-bg-image-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-bg-image-types {
         $class-name: hu-class-name(bg-image-#{$type});
         $property: background-image;
