--- a/src/classes/_hu-bg-position-x.scss
+++ b/src/classes/_hu-bg-position-x.scss
@@ -13,7 +13,7 @@
 
 @if (index($hu-bg-position-x-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-bg-position-x-types {
         $class-name: hu-class-name(bg-position-x-#{$type});
         $property: background-position-x;
