--- a/src/classes/_hu-blend-mode.scss
+++ b/src/classes/_hu-blend-mode.scss
@@ -13,7 +13,7 @@
 
 @if (index($hu-blend-mode-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-blend-mode-types {
         $class-name: hu-class-name(blend-mode-#{$type});
         $property: mix-blend-mode;
