--- a/src/classes/_hu-border-radius.scss
+++ b/src/classes/_hu-border-radius.scss
@@ -14,7 +14,7 @@
 
 @if (index($hu-border-radius-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $scale, $value in $hu-border-radius-scale {
         @each $type, $properties in $hu-border-radius-types {
           $class-name: hu-class-name(#{$type}-#{$scale});
