--- a/src/classes/_hu-box-sizing.scss
+++ b/src/classes/_hu-box-sizing.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-box-sizing-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-box-sizing-types {
         $class-name: hu-class-name(box-sizing-#{$type});
         $property: box-sizing;
