--- a/src/classes/_hu-columns.scss
+++ b/src/classes/_hu-columns.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-columns-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-columns-types {
         $class-name: hu-class-name(columns-#{$type});
         $property: columns;
