--- a/src/classes/_hu-cursor.scss
+++ b/src/classes/_hu-cursor.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-cursor-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-cursor-types {
         $class-name: hu-class-name(cursor-#{$type});
         $property: cursor;
