--- a/src/classes/_hu-display.scss
+++ b/src/classes/_hu-display.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-display-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-display-types {
         $class-name: hu-class-name(display-#{$type});
         $property: display;
