--- a/src/classes/_hu-flex-wrap.scss
+++ b/src/classes/_hu-flex-wrap.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-flex-wrap-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-flex-wrap-types {
         $class-name: hu-class-name(flex-wrap-#{$type});
         $property: flex-wrap;
