--- a/src/classes/_hu-float.scss
+++ b/src/classes/_hu-float.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-float-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-float-types {
         $class-name: hu-class-name(float-#{$type});
         $property: float;
