--- a/src/classes/_hu-font-smoothing.scss
+++ b/src/classes/_hu-font-smoothing.scss
@@ -13,7 +13,7 @@
 
 @if (index($hu-font-smoothing-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-font-smoothing-types {
         $class-name: hu-class-name(font-smoothing);
 
