--- a/src/classes/_hu-letter-spacing.scss
+++ b/src/classes/_hu-letter-spacing.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-letter-spacing-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-letter-spacing-types {
         $class-name: hu-class-name(letter-spacing-#{$type});
         $property: letter-spacing;
