--- a/src/classes/_hu-line-height.scss
+++ b/src/classes/_hu-line-height.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-line-height-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-line-height-types {
         $class-name: hu-class-name(line-height-#{$type});
         $property: line-height;
