--- a/src/classes/_hu-list-style.scss
+++ b/src/classes/_hu-list-style.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-list-style-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-list-style-types {
         $class-name: hu-class-name(list-style-#{$type});
         $property: list-style;
