--- a/src/classes/_hu-min-width.scss
+++ b/src/classes/_hu-min-width.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-min-width-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-min-width-types {
         $class-name: hu-class-name(min-width-#{$type});
         $property: min-width;
