--- a/src/classes/_hu-opacity.scss
+++ b/src/classes/_hu-opacity.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-opacity-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-opacity-types {
         $class-name: hu-class-name(opacity-#{$type});
         $property: opacity;
