--- a/src/classes/_hu-overflow.scss
+++ b/src/classes/_hu-overflow.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-overflow-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-overflow-types {
         $class-name: hu-class-name(overflow-#{$type});
         $property: overflow;
