--- a/src/classes/_hu-position.scss
+++ b/src/classes/_hu-position.scss
@@ -13,7 +13,7 @@
 
 @if (index($hu-position-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-position-types {
         $class-name: hu-class-name(position-#{$type});
         $property: position;
