--- a/src/classes/_hu-rotate.scss
+++ b/src/classes/_hu-rotate.scss
@@ -13,7 +13,7 @@
 
 @if (index($hu-rotate-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-rotate-types {
         $class-name: hu-class-name(rotate-#{$type});
         $property: rotate;
