--- a/src/classes/_hu-scroll-behavior.scss
+++ b/src/classes/_hu-scroll-behavior.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-scroll-behavior-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-scroll-behavior-types {
         $class-name: hu-class-name(scroll-behavior-#{$type});
         $property: scroll-behavior;
