--- a/src/classes/_hu-table-layout.scss
+++ b/src/classes/_hu-table-layout.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-table-layout-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-table-layout-types {
         $class-name: hu-class-name(table-layout-#{$type});
         $property: table-layout;
