--- a/src/classes/_hu-text-case.scss
+++ b/src/classes/_hu-text-case.scss
@@ -13,7 +13,7 @@
 
 @if (index($hu-text-case-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-text-case-types {
         $class-name: hu-class-name(text-case-#{$type});
         $property: text-transform;
