--- a/src/classes/_hu-transform.scss
+++ b/src/classes/_hu-transform.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-transform-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-transform-types {
         $class-name: hu-class-name(transform-#{$type});
         $property: transform;
