--- a/src/classes/_hu-transition-property.scss
+++ b/src/classes/_hu-transition-property.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-transition-property-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-transition-property-types {
         $class-name: hu-class-name(transition-property-#{$type});
         $property: transition-property;
