--- a/src/classes/_hu-translate-y.scss
+++ b/src/classes/_hu-translate-y.scss
@@ -13,7 +13,7 @@
 
 @if (index($hu-translate-y-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-translate-y-types {
         $class-name: hu-class-name(translate-y-#{$type});
         $property: translate-y;
