--- a/src/classes/_hu-white-space.scss
+++ b/src/classes/_hu-white-space.scss
@@ -12,7 +12,7 @@
 
 @if (index($hu-white-space-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
-    @media (min-width: $bp-value) {
+    @include hu-media-query($bp-value) {
       @each $type, $value in $hu-white-space-types {
         $class-name: hu-class-name(white-space-#{$type});
         $property: white-space;
