--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -37,6 +37,7 @@
 @import "hu-margin";
 @import "hu-max-height";
 @import "hu-max-width";
+@import "hu-min-height";
 @import "hu-min-width";
 @import "hu-momentum-scrolling";
 @import "hu-opacity";
